Week3/Day4/Exercises/Coloring-Game/style.css
* {
  margin: 0;
  padding: 0;
}

body {
  background-color: gray;
}

button {
  background-color: white;
  width: 100%;
}

#squareAmountBtn {
  grid-column: 1 / 2;

}

#clearBtn {
  grid-column: 2 / 3;

}


#eraserBtn {
  grid-column: 3 / 4;
}

.grid-right,
.grid-left {
  display: grid;
}

.grid-left {
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(8, 1fr);
  width: 30%;
  height: 100vh;
  position: absolute;
  gap: 2px;
}

.grid-left > div {
  border: 1px solid black;
  width: 95%;
}

.grid-right {
  grid-template-columns: repeat(60, 1fr);
  grid-template-rows: repeat(20, 1fr);
  position: absolute;
  right: 0;
  width: 70%;
  height: 100vh;
}

.grid-right > div {
  border: 1px solid gray;
  background-color: white;
  width: 100%;
}

